Fixes typo in index.html.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         You don't even have to use DropBox. You could could configure the app to use any old directory that contains photos or other images.
     </li>
     <li>A simple ASP.NET MVC 2.0 blog app that uses the Entity Framework "Code-First" approach to generate the model. The real brains of this app
-        is the console app that 
+        is the console app that monitors the source image directory and resizes the photos. You could use this console app with any 
+        blog platform, as long as you are can execute a Windows console .EXE.
      </li>
     <li>
         SQL Server Compact Edition (a light-weight, file-based version of SQL Server) for storing the post data. 
