Edits to index.html.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
     <li>
         SQL Server Compact Edition (a light-weight, file-based version of SQL Server) for storing the post data. 
     </li>
+    <li id="marco">
+        It's worth mentioning that my inspiration for this project was <a href="https://github.com/marcoarment/secondcrack" target="_blank">
+        Marco Arment's "Second Crack" blog engine project,
+        </a>
+         though I am not utilizing 
+        any of his code. Thanks for the idea, Marco!
+    </li>
 </ul>
 <h2>What's Complete</h2>
 <ul>
@@ -72,6 +79,10 @@
         one, now that I think about it. Hmmmmm...).
     </li>
     <li>Add user authentication through the ASP.Net Universal Membership Provider (I've been told it works with SQL Server CE.)</li>
+    <li>
+        <a href="#marco">I mentioned about being inspired by Marco Arment's tool earlier</a>. I would like for my blog tool to be capable of importing a static text file from a monitored folder and 
+        and automatically post it on the blog site, just like Marco's.
+    </li>
     <li>I've thought about adding an optional FTP function for folks who want to use teqChecker with a shared hosting deployment. I have not need for 
         this at the moment, but I can see how it could come in handy for others. If there is some interest shown, I might be willing to give it a shot (feel free to fork 
         my project and send me a pull request with your mods, of course).
