--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </li>
     <li>Add user authentication through the ASP.Net Universal Membership Provider (I've been told it works with SQL Server CE.)</li>
     <li>
-        <a href="#marco">I mentioned about being inspired by Marco Arment's tool earlier</a>. I would like for my blog tool to be capable of importing a static text file from a monitored folder and 
+        <a href="#marco">I mentioned being inspired by Marco Arment's tool earlier</a>. I would like for my blog tool to be capable of importing a static text file from a monitored folder and 
         and automatically post it on the blog site, just like Marco's.
     </li>
     <li>I've thought about adding an optional FTP function for folks who want to use teqChecker with a shared hosting deployment. I have not need for 
